--- a/templates/admin/settings.html
+++ b/templates/admin/settings.html
@@ -30,6 +30,10 @@
                             {{ form.bio.label }}
                         </div>
                         <div class="form-floating mb-3">
+                            {{ form.cover(class="form-control") }}
+                            {{ form.cover.label }}
+                        </div>
+                        <div class="form-floating mb-3">
                             {{ form.status(class="form-control", value="%s" | format(settings.status)) }}
                             {{ form.status.label }}
                         </div>
