feat(cv): make cv pdf generation from html using python module pdfkit
TODO: customize cv.html template to look like a complete CV

--- a/templates/base.html
+++ b/templates/base.html
@@ -120,6 +120,7 @@
                         <li class="list-group-item"><a href="{{ url_for('home') }}#education">Education</a></li>
                         <li class="list-group-item"><a href="{{ url_for('home') }}#experience">Experience</a></li>
                         <li class="list-group-item"><a href="{{ url_for('portfolio') }}">Portfolio</a></li>
+                        <li class="list-group-item"><a href="{{ url_for('get_cv') }}">Download CV</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-6 col-md-3">
