--- a/templates/landing.html
+++ b/templates/landing.html
@@ -34,7 +34,7 @@
                 <p class="lead">{{ settings.bio }}</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                     <button type="button" class="btn btn-dark btn-lg px-4 me-md-2" data-bs-toggle="modal" data-bs-target="#cover">Learn More</button>
-                    <a href="{{ settings.cv }}" class="btn btn-light btn-lg px-4">Download CV</a>
+                    <a href="{{ url_for('get_cv') }}" class="btn btn-light btn-lg px-4">Download CV</a>
                 </div>
             </div>
             {% include "inc/social-links.html" %}
