--- a/templates/cv.html
+++ b/templates/cv.html
@@ -16,6 +16,7 @@
         }
         hr.separator {
             border-top: 2px dashed #1a9ce9;
+            height:0;
         }
         span.icon {
             font-size: 2rem;
@@ -32,6 +33,13 @@
             border-left: 3px solid #ccdde8;
             padding-left: 1.5rem;
             margin-bottom: 3rem;
+        }
+        .w-50 {
+            width: 50%;
+            padding: 1rem;
+        }
+        table {
+            margin-top: 0;
         }
 
         /*------------------------------------------ TYPOGRAPHY */
@@ -51,6 +59,20 @@
         .text-center {
             text-align: center;
         }
+        .text-left {
+            text-align: left;
+        }
+        .text-right {
+            text-align: right;
+        }
+        .text-light {
+            font-weight: lighter;
+        }
+
+        /*------------------------------------------ INTRODUCTION */
+        .head {
+            display:flex;
+        }
 
         /*------------------------------------------ SKILLS */
         .skills li {
@@ -64,7 +86,21 @@
         }
 
         /*------------------------------------------ IMAGES */
-        img {
+        .profile-container {
+            display: inline-block;
+            padding: 0.5rem;
+            border: 2px solid #1a9ce9;
+            border-radius: 50%;
+            overflow: hidden;
+        }
+        .profile {
+            width: 200px;
+            height:200px;
+            background: url('{{ root }}uploads/{{ settings.photos.replace(' ', '') }}');
+            background-size: cover;
+            border-radius: 50%;
+        }
+        img.gallery {
             height: 100px;
             width: auto;
         }
@@ -72,11 +108,22 @@
 </head>
 
 <body>
-    <h1 class="text-center">{{ settings.name }}</h1>
-    <h2 class="text-center">{{ settings.title }}</h2>
-    <h3 class="fw-normal no-margin text-center">{{ settings.address }}</h3>
-    <h3 class="fw-normal no-margin text-center">{{ settings.email }}</h3>
-    <h3 class="fw-normal no-margin text-center">{{ settings.phone }}</h3>
+    <table>
+        <tr>
+            <td class="w-50 text-right">
+                <div class="profile-container">
+                    <div class="profile"></div>
+                </div>
+            </td>
+            <td class="w-50 text-left">
+                <h1>{{ settings.name }}</h1>
+                <h2>{{ settings.title }}</h2>
+                <h3 class="fw-normal no-margin">{{ settings.address }}</h3>
+                <h3 class="fw-normal no-margin">{{ settings.email }}</h3>
+                <h3 class="fw-normal no-margin">{{ settings.phone }}</h3>
+            </td>
+        </tr>
+    </table>
     <p class="text-center">{{ settings.bio }}</p>
     <p class="text-center">{{ settings.cover }}</p>
     <!-- WORK EXPERIENCE -->
@@ -87,7 +134,7 @@
         <div class="item">
             <h3>{{ job.role }}</h3>
             <h4 class="no-margin">{{ job.company }}</h4>
-            <p class="no-margin">{{ job.period }}</p>
+            <p class="no-margin text-light">{{ job.period }}</p>
             <p>{{ job.description }}</p>
         </div>
     {% endfor %}
@@ -99,7 +146,7 @@
         <div class="item">
             <h3>{{ school.title }}</h3>
             <h4 class="no-margin">{{ school.school }}</h4>
-            <p class="no-margin">{{ school.period }}</p>
+            <p class="no-margin text-light">{{ school.period }}</p>
             <p class="no-margin">{{ school.department }}</p>
             <p>{{ school.description }}</p>
         </div>
@@ -122,18 +169,28 @@
             <h3>{{ project.title }}</h3>
             <h4 class="fw-normal no-margin">{{ project.tech }}</h4>
             {% if project.live_url %}
-                <h4 class="fw-normal no-margin"><strong>Demo:</strong> {{ project.live_url }}</h4>
+                <h4 class="fw-normal no-margin"><strong>Demo:</strong> <span class="text-light">{{ project.live_url }}</span></h4>
             {% endif %}
             {% if project.repo %}
-                <h4 class="fw-normal no-margin"><strong>Source:</strong> {{ project.repo }}</h4>
+                <h4 class="fw-normal no-margin"><strong>Source:</strong> <span class="text-light">{{ project.repo }}</span></h4>
             {% endif %}
             <p>{{ project.description }}</p>
             {% if project.photos|length %}
                 {% set photos = project.photos.split(',') %}
                 {% for photo in photos %}
-                    <img src="{{ root }}uploads/{{ photo.replace(' ', '') }}" alt="Photo {{ loop.index }}">
+                    <img src="{{ root }}uploads/{{ photo.replace(' ', '') }}" alt="Photo {{ loop.index }}" class="gallery">
                 {% endfor %}
             {% endif %}
+        </div>
+    {% endfor %}
+    <!-- TESTIMONIALS -->
+    <div class="text-center"><span class="icon"><i class="fas fa-quote-right"></i></span></div>
+    <hr class="separator">
+    <h2 class="text-center">Testimonials</h2>
+    {% for testimonial in testimonials %}
+        <div class="item">
+            <p class="no-margin"><em>"{{ testimonial.text }}"</em></p>
+            <h4 class="no-margin fw-normal">(<strong>{{ testimonial.author }}</strong> <span class="text-light">{{ testimonial.role }})</span></h4>
         </div>
     {% endfor %}
 </body>
