--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -141,16 +141,17 @@
                     {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
                     {% for category, message in messages %}
-                    <div class="d-flex w-100 toast bg-{{ category }}" role="alert" aria-live="assertive"
-                        aria-atomic="true">
-                        <span class="m-auto px-2">
-                            <i class="bi bi-bell-fill"></i>
-                        </span>
-                        <div class="toast-body">
-                            <h4>{{ message }}</h4>
+                    <div class="w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="d-flex">
+                            <span class="m-auto px-2">
+                                <i class="bi bi-bell-fill"></i>
+                            </span>
+                            <div class="toast-body">
+                                <h4>{{ message }}</h4>
+                            </div>
+                            <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
+                                    class="bi bi-x-circle"></i></a>
                         </div>
-                        <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
-                                class="bi bi-x-circle"></i></a>
                     </div>
                     {% endfor %}
                     {% endif %}
