--- a/templates/base.html
+++ b/templates/base.html
@@ -83,15 +83,17 @@
         {% if messages %}
         <div class="toast-container position-fixed top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
             {% for category, message in messages %}
-            <div class="d-flex w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
-                <span class="m-auto px-2">
-                    <i class="bi bi-bell-fill"></i>
-                </span>
-                <div class="toast-body">
-                    <h4>{{ message }}</h4>
+            <div class=w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="d-flex">
+                    <span class="m-auto px-2">
+                        <i class="bi bi-bell-fill"></i>
+                    </span>
+                    <div class="toast-body">
+                        <h4>{{ message }}</h4>
+                    </div>
+                    <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
+                            class="bi bi-x-circle"></i></a>
                 </div>
-                <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
-                        class="bi bi-x-circle"></i></a>
             </div>
             {% endfor %}
         </div>
