--- a/templates/project.html
+++ b/templates/project.html
@@ -76,45 +76,54 @@
                 <p>{{ project.description }}</p>
             </div>
         </div>
-    </div>
+        {% if photos|length <= 1 %}
+            <div class="row">
+                <div class="col">
+                    <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i class="bi bi-arrow-left-circle"></i> Go
+                        back</a>
+                </div>
+            </div>
+        {% endif %}
     </div>
 </section>
-<section id="project-gallery">
-    <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
-    <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
-        preserveAspectRatio="none">
-        <g class="separator" transform="translate(-9.2218046,-83.494585)">
-            <path class="fill-dark"
-                d="M 9.484815,89.716055 H 209.81018 V 126.90507 L 110.46368,93.705147 9.579391,127.39334 Z" />
-            <path class="fill-bg-color"
-                d="M 9.3544335,83.626877 H 209.68181 V 120.29057 L 110.46368,93.705147 9.4490103,120.77195 Z" />
-        </g>
-    </svg>
-    <div class="container-xl">
-        <h2 class="section-title text-shadow">Gallery</h2>
-        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 mb-4" data-masonry='{"percentPosition": true }'>
-            {% for photo in photos %}
-                {% if loop.index0 > 0 %}
-                    <div class="col">
-                        <figure>
-                            <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
-                                class="{{ project.slug }}-gallery"><img
-                                    src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
-                                    alt="Photo {{ loop.index }}" class="gallery-item"></a>
-                        </figure>
-                    </div>
-                {% endif %}
-            {% endfor %}
-        </div>
-        <div class="row">
-            <div class="col">
-                <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i
-                        class="bi bi-arrow-left-circle"></i> Go
-                    back</a>
+{% if photos|length > 1 %}
+    <section id="project-gallery">
+        <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
+        <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
+            preserveAspectRatio="none">
+            <g class="separator" transform="translate(-9.2218046,-83.494585)">
+                <path class="fill-dark"
+                    d="M 9.484815,89.716055 H 209.81018 V 126.90507 L 110.46368,93.705147 9.579391,127.39334 Z" />
+                <path class="fill-bg-color"
+                    d="M 9.3544335,83.626877 H 209.68181 V 120.29057 L 110.46368,93.705147 9.4490103,120.77195 Z" />
+            </g>
+        </svg>
+        <div class="container-xl">
+            <h2 class="section-title text-shadow">Gallery</h2>
+            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 mb-4" data-masonry='{"percentPosition": true }'>
+                {% for photo in photos %}
+                    {% if loop.index0 > 0 %}
+                        <div class="col">
+                            <figure>
+                                <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                    class="{{ project.slug }}-gallery"><img
+                                        src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                        alt="Photo {{ loop.index }}" class="gallery-item"></a>
+                            </figure>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
+            <div class="row">
+                <div class="col">
+                    <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i
+                            class="bi bi-arrow-left-circle"></i> Go
+                        back</a>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
+{% endif %}
 {% endblock content %}
 
 {% block scripts %}
