feat(landingg): add edit/create links to every section in landing and base if admin is logged in

--- a/templates/inc/social-links.html
+++ b/templates/inc/social-links.html
@@ -2,4 +2,9 @@
     {% for link in links %}
     <div><a href="{{ link.url }}" target="_blank"><i class="bi bi-{{ link.icon }}"></i></a></div>
     {% endfor %}
+    {% if session['user'] %}
+        <div>
+            <a href="{{ url_for('get_links') }}" class="text-danger"><i class="bi bi-pencil"></i></a>
+        </div>
+    {% endif %}
 </div>
