--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('contact') }}" data-toggle="offcavas">Contact</a>
                     </li>
+                    {% if session['user'] %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('admin') }}" data-toggle="offcavas">Dashboard</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -83,7 +88,7 @@
         {% if messages %}
         <div class="toast-container position-fixed top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
             {% for category, message in messages %}
-            <div class=w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="d-flex">
                     <span class="m-auto px-2">
                         <i class="bi bi-bell-fill"></i>
@@ -132,8 +137,10 @@
                         <li class="list-group-item"><a href="{{ url_for('blog') }}">Blog</a></li>
                         <li class="list-group-item"><a href="{{ url_for('contact') }}">Contact</a></li>
                         <li class="list-group-item"><a href="{{ url_for('home') }}#testimonials">Testimonials</a></li>
-                        <li class="list-group-item"><a href="{{ url_for('add_testimonial') }}">Write Testimonial</a>
-                        </li>
+                        <li class="list-group-item"><a href="{{ url_for('add_testimonial') }}">Write Testimonial</a></li>
+                        {% if session['user'] %}
+                            <li class="list-group-item"><a href="{{ url_for('admin') }}">Dashboard</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
