--- a/templates/inc/social-links.html
+++ b/templates/inc/social-links.html
@@ -3,8 +3,12 @@
     <div><a href="{{ link.url }}" target="_blank"><i class="bi bi-{{ link.icon }}"></i></a></div>
     {% endfor %}
     {% if session['user'] %}
-        <div>
-            <a href="{{ url_for('get_links') }}" class="text-danger"><i class="bi bi-pencil"></i></a>
-        </div>
+    <div>
+        <a href="{{ url_for('get_links') }}" class="bg-secondary text-light rounded-circle"><i class=" bi
+            bi-pencil"></i></a>
+    </div>
+    <div>
+        <a href="{{ url_for('add_link') }}" class="bg-success rounded-circle text-light"><i class="bi bi-plus"></i></a>
+    </div>
     {% endif %}
 </div>
