--- a/templates/landing.html
+++ b/templates/landing.html
@@ -17,7 +17,7 @@
             <div class="col-12 col-md-7 col-lg-8">
                 <h1 class="hero-title display-5 fw-bold lh-1 mb-3 text-shadow position-relative">{{ settings.name }}
                     {% if session['user'] %}
-                        <a href="{{ url_for('get_settings') }}" class="position-absolute top-0 end-0 btn btn-sm btn-light"><i class="bi bi-pencil"></i></a>
+                        <a href="{{ url_for('get_settings') }}" class="position-absolute top-0 end-0 btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
                     {% endif %}
                 </h1>
                 <h3 class="hero-subtitle mb-3">{{ settings.title }}</h3>
@@ -66,7 +66,7 @@
         {% if session['user'] %}
             <div class="position-absolute top-0 end-0 mt-2">
                 <a href="{{ url_for('add_skill') }}" class="btn btn-sm btn-success"><i class="bi bi-plus"></i></a>
-                <a href="{{ url_for('get_skills') }}" class="btn btn-sm btn-dark"><i class="bi bi-pencil"></i></a>
+                <a href="{{ url_for('get_skills') }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
             </div>
         {% endif %}
         <h2 class="section-title">Skills</h2>
@@ -101,7 +101,7 @@
         {% if session['user'] %}
             <div class="position-absolute top-0 end-0 mt-2">
                 <a href="{{ url_for('add_education') }}" class="btn btn-sm btn-success"><i class="bi bi-plus"></i></a>
-                <a href="{{ url_for('get_education') }}" class="btn btn-sm btn-light"><i class="bi bi-pencil"></i></a>
+                <a href="{{ url_for('get_education') }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
             </div>
         {% endif %}
         <h2 class="section-title">Education</h2>
@@ -141,7 +141,7 @@
         {% if session['user'] %}
             <div class="position-absolute top-0 end-0 mt-2">
                 <a href="{{ url_for('add_experience') }}" class="btn btn-sm btn-success"><i class="bi bi-plus"></i></a>
-                <a href="{{ url_for('get_experience') }}" class="btn btn-sm btn-dark"><i class="bi bi-pencil"></i></a>
+                <a href="{{ url_for('get_experience') }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
             </div>
         {% endif %}
         <h2 class="section-title">Experience</h2>
@@ -179,7 +179,7 @@
     <div class="container-xl position-relative">
         {% if session['user'] %}
             <div class="position-absolute top-0 end-0 mt-2">
-                <a href="{{ url_for('get_testimonials') }}" class="btn btn-sm btn-light"><i class="bi bi-pencil"></i></a>
+                <a href="{{ url_for('get_testimonials') }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
             </div>
         {% endif %}
         <h2 class="section-title text-shadow">Testimonials</h2>
