--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -23,6 +23,14 @@
             </path>
         </g>
     </svg>
+    {% if session['user'] %}
+        <div class="container-xl position-relative p-4">
+            <div class="position-absolute top-0 end-0 mt-2">
+                <a href="{{ url_for('add_project') }}" class="btn btn-lg btn-success rounded-circle"><i class="bi bi-plus"></i></a>
+                <a href="{{ url_for('get_projects') }}" class="btn btn-lg btn-accent-light"><i class="bi bi-pencil"></i></a>
+            </div>
+        </div>
+    {% endif %}
     <div class="container-xl">
         {% include "inc/breadcrumbs.html" %}
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 justify-content-center">
@@ -49,6 +57,12 @@
                         {% endif %}
                         <li class="list-group-item d-grid"><a href="{{ url_for('get_project', project=project.slug) }}"
                                 class="btn btn-sm btn-accent"><i class="bi bi-info-circle-fill"></i> Details</a></li>
+                        {% if session['user'] %}
+                            <li class="list-group-item d-flex justify-content-evenly">
+                                <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
+                                <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-sm btn-danger confirm"><i class="bi bi-trash"></i></a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
