--- a/templates/landing.html
+++ b/templates/landing.html
@@ -15,9 +15,9 @@
                 </a>
             </div>
             <div class="col-12 col-md-7 col-lg-8">
-                <h1 class="hero-title display-5 fw-bold lh-1 mb-3 text-shadow position-relative">{{ settings.name }}
+                <h1 class="hero-title display-5 fw-bold lh-1 mb-3 text-shadow">{{ settings.name }}
                     {% if session['user'] %}
-                        <a href="{{ url_for('get_settings') }}" class="position-absolute top-0 end-0 btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
+                        <a href="{{ url_for('get_settings') }}" class="btn btn-accent-light float-end"><i class="bi bi-pencil"></i></a>
                     {% endif %}
                 </h1>
                 <h3 class="hero-subtitle mb-3">{{ settings.title }}</h3>
@@ -62,14 +62,15 @@
             </path>
         </g>
     </svg>
-    <div class="container-xl position-relative">
+    <div class="container-xl">
+        <h2 class="section-title">Skills
         {% if session['user'] %}
-            <div class="position-absolute top-0 end-0 mt-2">
-                <a href="{{ url_for('add_skill') }}" class="btn btn-sm btn-success"><i class="bi bi-plus"></i></a>
-                <a href="{{ url_for('get_skills') }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
+            <div class="float-end mt-2 mx-2">
+                <a href="{{ url_for('add_skill') }}" class="btn btn-success rounded-circle"><i class="bi bi-plus"></i></a>
+                <a href="{{ url_for('get_skills') }}" class="btn btn-accent-light"><i class="bi bi-pencil"></i></a>
             </div>
         {% endif %}
-        <h2 class="section-title">Skills</h2>
+        </h2>
         <div class="row">
             {% for skill in skills %}
             <div class="col-12 col-sm-6">
@@ -97,14 +98,15 @@
                 d="M 9.3544335,83.626877 H 209.68181 V 120.29057 L 110.46368,93.705147 9.4490103,120.77195 Z" />
         </g>
     </svg>
-    <div class="container-xl position-relative">
+    <div class="container-xl">
+        <h2 class="section-title">Education
         {% if session['user'] %}
-            <div class="position-absolute top-0 end-0 mt-2">
-                <a href="{{ url_for('add_education') }}" class="btn btn-sm btn-success"><i class="bi bi-plus"></i></a>
-                <a href="{{ url_for('get_education') }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
+            <div class="float-end mt-2 mx-2">
+                <a href="{{ url_for('add_education') }}" class="btn btn-success rounded-circle"><i class="bi bi-plus"></i></a>
+                <a href="{{ url_for('get_education') }}" class="btn btn-accent-light"><i class="bi bi-pencil"></i></a>
             </div>
         {% endif %}
-        <h2 class="section-title">Education</h2>
+        </h2>
         {% for school in education %}
         <div class="card card-education mb-3 w-100">
             <div class="row g-0">
@@ -137,14 +139,15 @@
                 d="M 9.3544335,83.626877 H 209.68181 V 120.29057 L 110.46368,93.705147 9.4490103,120.77195 Z" />
         </g>
     </svg>
-    <div class="container-xl position-relative">
+    <div class="container-xl">
+        <h2 class="section-title">Experience
         {% if session['user'] %}
-            <div class="position-absolute top-0 end-0 mt-2">
-                <a href="{{ url_for('add_experience') }}" class="btn btn-sm btn-success"><i class="bi bi-plus"></i></a>
-                <a href="{{ url_for('get_experience') }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
+            <div class="float-end mt-2 mx-2">
+                <a href="{{ url_for('add_experience') }}" class="btn btn-success rounded-circle"><i class="bi bi-plus"></i></a>
+                <a href="{{ url_for('get_experience') }}" class="btn btn-accent-light"><i class="bi bi-pencil"></i></a>
             </div>
         {% endif %}
-        <h2 class="section-title">Experience</h2>
+        </h2>
         {% for job in experience %}
         <div class="card card-experience bg-accent mb-3 w-100">
             <div class="row g-0">
@@ -176,13 +179,12 @@
                 d="M 9.3544335,83.626877 H 209.68181 V 120.29057 L 110.46368,93.705147 9.4490103,120.77195 Z" />
         </g>
     </svg>
-    <div class="container-xl position-relative">
+    <div class="container-xl">
+        <h2 class="section-title text-shadow">Testimonials
         {% if session['user'] %}
-            <div class="position-absolute top-0 end-0 mt-2">
-                <a href="{{ url_for('get_testimonials') }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
-            </div>
+                <a href="{{ url_for('get_testimonials') }}" class="btn btn-accent-light float-end mt-2 mx-3"><i class="bi bi-pencil"></i></a>
         {% endif %}
-        <h2 class="section-title text-shadow">Testimonials</h2>
+        </h2>
         <div class="card card-testimonials mb-3 w-100">
             <div class="card-body">
                 <div id="carousel-testimonials" class="carousel slide" data-bs-ride="carousel">
