--- a/templates/project.html
+++ b/templates/project.html
@@ -31,12 +31,10 @@
     <div class="container-xl">
         {% include "inc/breadcrumbs.html" %}
         <div class="row mb-4">
-            <div class="col position-relative">
+            <div class="col">
                 {% if session['user'] %}
-                    <div class="position-absolute top-0 end-0 mt-2">
-                        <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-sm btn-accent-light"><i class="bi bi-pencil"></i></a>
-                        <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-sm btn-danger confirm"><i class="bi bi-trash"></i></a>
-                    </div>
+                    <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-danger confirm mx-2 float-end"><i class="bi bi-trash"></i></a>
+                    <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-accent-light float-end"><i class="bi bi-pencil"></i></a>
                 {% endif %}
                 <a href="{{ url_for('portfolio') }}" class="btn btn-accent-light"><i
                         class="bi bi-arrow-left-circle"></i> Go
