--- a/templates/admin/blogs.html
+++ b/templates/admin/blogs.html
@@ -11,6 +11,8 @@
     </div>
     <div class="row">
         <div class="col">
+            <a href="{{ url_for('blog') }}" class="btn btn-round btn-accent float-end m-4"><i
+                    class="bi bi-eye-fill"></i></a>
             <a href="{{ url_for('add_blog') }}" class="btn btn-round btn-success float-end m-4" data-bs-toggle="tooltip"
                 data-bs-placement="left" title="Add new"><i class="bi bi-plus"></i></a>
         </div>
@@ -24,13 +26,13 @@
             <li class="list-group-item d-flex justify-content-between">
                 <div class="row w-100 align-items-center">
                     <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
-                    {% if blog.photos|length %}
+                        {% if blog.photos|length %}
                         {% set photos = blog.photos.split(',') %}
                         <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}" alt="{{ blog.title }}"
                             class="img-fluid">
-                    {% else %}
+                        {% else %}
                         <i class="bi bi-blockquote-left fs-1"></i>
-                    {% endif %}
+                        {% endif %}
                     </div>
                     <div class="col-12 col-sm-10">
                         <h3 class="text-start">{{ blog.title }}</h3>
@@ -40,10 +42,12 @@
                     </div>
                 </div>
                 <div class="controls d-flex flex-column align-items-center justify-content-around ms-4">
-                    <a href="{{ url_for('delete_blog', id=blog._id) }}" class="btn btn-sm btn-danger confirm"><i
-                            class="bi bi-trash"></i></a>
+                    <a href="{{ url_for('get_post', post=blog.slug) }}" class="btn btn-sm btn-accent"><i
+                            class="bi bi-eye-fill"></i></a>
                     <a href="{{ url_for('edit_blog', id=blog._id) }}" class="btn btn-sm btn-light"><i
                             class="bi bi-pencil"></i></a>
+                    <a href="{{ url_for('delete_blog', id=blog._id) }}" class="btn btn-sm btn-danger confirm"><i
+                            class="bi bi-trash"></i></a>
                 </div>
             </li>
             {% endfor %}
