--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -11,6 +11,8 @@
     </div>
     <div class="row">
         <div class="col">
+            <a href="{{ url_for('portfolio') }}" class="btn btn-round btn-accent float-end m-4"><i
+                    class="bi bi-eye-fill"></i></a>
             <a href="{{ url_for('add_project') }}" class="btn btn-round btn-success float-end m-4"
                 data-bs-toggle="tooltip" data-bs-placement="left" title="Add new"><i class="bi bi-plus"></i></a>
         </div>
@@ -25,17 +27,17 @@
                 <div class="row w-100 align-items-center">
                     <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
                         {% if project.photos|length %}
-                            {% set photos = project.photos.split(',') %}
-                            <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
-                                alt="{{ project.title }}" class="img-fluid mb-1">
-                            {% for photo in photos %}
-                                {% if loop.index0 != 0 %}
-                                <img src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
-                                    alt="Photo {{ loop.index }}" class="w-25">
-                                {% endif %}
-                            {% endfor %}
+                        {% set photos = project.photos.split(',') %}
+                        <img src="{{ url_for('uploads', filename=photos[0].replace(' ', '')) }}"
+                            alt="{{ project.title }}" class="img-fluid mb-1">
+                        {% for photo in photos %}
+                        {% if loop.index0 != 0 %}
+                        <img src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                            alt="Photo {{ loop.index }}" class="w-25">
+                        {% endif %}
+                        {% endfor %}
                         {% else %}
-                            <i class="bi bi-display fs-1"></i>
+                        <i class="bi bi-display fs-1"></i>
                         {% endif %}
                     </div>
                     <div class="col-12 col-sm-10">
@@ -47,6 +49,8 @@
                     </div>
                 </div>
                 <div class="controls d-flex flex-column align-items-center justify-content-around ms-4">
+                    <a href="{{ url_for('get_project', project=project.slug) }}" class="btn btn-sm btn-accent"><i
+                            class="bi bi-eye-fill"></i></a>
                     <a href="{{ url_for('delete_project', id=project._id) }}" class="btn btn-sm btn-danger confirm"><i
                             class="bi bi-trash"></i></a>
                     <a href="{{ url_for('edit_project', id=project._id) }}" class="btn btn-sm btn-light"><i
