--- a/templates/base.html
+++ b/templates/base.html
@@ -74,9 +74,12 @@
                         <a class="nav-link" href="{{ url_for('contact') }}" data-toggle="offcavas">Contact</a>
                     </li>
                     {% if session['user'] %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('admin') }}" data-toggle="offcavas">Dashboard</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin') }}" data-toggle="offcavas">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}" data-toggle="offcavas">Log out</a>
+                    </li>
                     {% endif %}
                 </ul>
             </div>
@@ -137,9 +140,11 @@
                         <li class="list-group-item"><a href="{{ url_for('blog') }}">Blog</a></li>
                         <li class="list-group-item"><a href="{{ url_for('contact') }}">Contact</a></li>
                         <li class="list-group-item"><a href="{{ url_for('home') }}#testimonials">Testimonials</a></li>
-                        <li class="list-group-item"><a href="{{ url_for('add_testimonial') }}">Write Testimonial</a></li>
+                        <li class="list-group-item"><a href="{{ url_for('add_testimonial') }}">Write Testimonial</a>
+                        </li>
                         {% if session['user'] %}
-                            <li class="list-group-item"><a href="{{ url_for('admin') }}">Dashboard</a></li>
+                        <li class="list-group-item"><a href="{{ url_for('admin') }}">Dashboard</a></li>
+                        <li class="list-group-item"><a href="{{ url_for('logout') }}">Log out</a></li>
                         {% endif %}
                     </ul>
                 </div>
