--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,11 +31,16 @@ body {
 }
 
 section {
-    padding-bottom: 6rem;
+    padding-bottom: 3rem;
+}
+
+section:last-of-type {
+    padding-bottom: 8rem;
 }
 
 .separator {
     filter: drop-shadow(0px 2px 1px rgba(0, 0, 0, .3));
+    margin-bottom: 2rem;
 }
 
 .page-title-container {
@@ -927,8 +932,8 @@ footer h3, footer h5 {
     .contact-form-container {
         padding: 0;
         background-color: var(--accent-light);
-        padding-bottom: 6rem;
-        margin-bottom: -6rem;
+        padding-bottom: 8rem;
+        margin-bottom: -8rem;
     }
     .card-testimonial-form {
         background: none;
@@ -941,12 +946,20 @@ footer h3, footer h5 {
 
 @media (max-width: 575px) {
     .hero-social {
+        bottom: -5.3rem;
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
     }
+    footer .hero-social {
+        top: -2.7rem;
+    }
     .hero-social div {
+        min-width: 2rem;
+        width: 2.7rem;
+        height: 2.7rem;
+        font-size: 1.7rem;
         margin: 0;
     }
     #blog-post figure {
