docs(skeleton): add improvements of wireframes to README.md

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -35,7 +35,7 @@
 <body>
     <!-- HEADER -->
     <header class="navbar bg-accent-transparent fixed-top flex-md-nowrap p-0 shadow">
-        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">{&pi;} Dev.PI</a>
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="{{ url_for('admin') }}">{&pi;} Dev.PI</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed text-shadow" type="button"
             data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
             aria-label="Toggle navigation">
