--- a/templates/admin/add_blog.html
+++ b/templates/admin/add_blog.html
@@ -1,78 +1,55 @@
 {% extends "admin/base.html" %}
-{% block styles %}
-
-{% endblock styles %}
 {% block content %}
-<section id="add_post">
-    <div class="row my-2 align-items-center">
-        <div class="order-1 order-sm-0 col-sm-8 col-md-9 col-lg-10">
-            <h1 class="text-start my-2">Add New Blog Post</h1>
+    <section id="add_post">
+        <div class="row my-2 align-items-center">
+            <div class="order-1 order-sm-0 col-sm-8 col-md-9 col-lg-10">
+                <h1 class="text-start my-2">Add New Blog Post</h1>
+            </div>
+            <div class="order-0 order-sm-1 col-8 offset-2 offset-sm-0 col-sm-4 col-md-3 col-lg-2 text-center">
+                <img src="{{ url_for('static', filename='images/post.svg') }}" alt="Blog Post" class="section-image">
+            </div>
         </div>
-        <div class="order-0 order-sm-1 col-8 offset-2 offset-sm-0 col-sm-4 col-md-3 col-lg-2 text-center">
-            <img src="{{ url_for('static', filename='images/post.svg') }}" alt="Blog Post" class="section-image">
+        <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            <form action="{{ url_for('add_blog') }}" method="POST" id="dropzoneForm">
+                {{ form.csrf_token }}
+                <div class="card-header">
+                    <h4 class="text-center">New</h4>
+                </div>
+                <div class="card-body">
+                    <div class="form-floating mb-3">
+                        {{ form.title(class="form-control", placeholder="Title") }}
+                        {{ form.title.label }}
+                    </div>
+                    <div class="form-floating mb-3">
+                        {{ form.slug(class="form-control", readonly="readonly", placeholder="Slug") }}
+                        {{ form.slug.label }}
+                    </div>
+                    {{ form.url_for_files(value="%s" | format(url_for('files'))) }}
+                    {{ form.collection(value="blogs") }}
+                    {{ form.photo_list() }}
+                    <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
+                    <div id="drop-area" data-multiple="true">
+                        <i class="bi bi-upload"></i>
+                        Drag&drop files here or click to select...
+                    </div>
+                    <div id="gallery" class="row"></div>
+                    <div class="form-floating mb-3">
+                        {{ form.body(class="form-control") }}
+                        {{ form.body.label }}
+                    </div>
+                </div>
+                <div class="card-footer text-center d-flex justify-content-between">
+                    <a href="{{ url_for('get_blogs') }}" class="btn btn-lg btn-danger" id="cancel-form">Cancel</a>
+                    {{ form.submit(class="btn btn-lg btn-accent", id="submit-form") }}
+                </div>
+            </form>
         </div>
-    </div>
-    <div class="card col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-        <form action="{{ url_for('add_blog') }}" method="POST" id="dropzoneForm">
-            {{ form.csrf_token }}
-            <div class="card-header">
-                <h4 class="text-center">New</h4>
-            </div>
-            <div class="card-body">
-                <div class="form-floating mb-3">
-                    {{ form.title(class="form-control", placeholder="Title") }}
-                    {{ form.title.label }}
-                </div>
-                <div class="form-floating mb-3">
-                    {{ form.slug(class="form-control", readonly="readonly", placeholder="Slug") }}
-                    {{ form.slug.label }}
-                </div>
-                {{ form.url_for_files(value="%s" | format(url_for('files'))) }}
-                {{ form.collection(value="blogs") }}
-                {{ form.photo_list() }}
-                <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
-                <div id="drop-area" data-multiple="true">
-                    <i class="bi bi-upload"></i>
-                    Drag&drop files here or click to select...
-                </div>
-                <div id="gallery" class="row"></div>
-                <div class="form-floating mb-3">
-                    {{ form.body(class="form-control") }}
-                    {{ form.body.label }}
-                </div>
-            </div>
-            <div class="card-footer text-center d-flex justify-content-between">
-                <a href="{{ url_for('get_blogs') }}" class="btn btn-lg btn-danger" id="cancel-form">Cancel</a>
-                {{ form.submit(class="btn btn-lg btn-accent", id="submit-form") }}
-            </div>
-        </form>
-    </div>
-</section>
+    </section>
 {% endblock content %}
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
-<script src="{{ url_for('static', filename='js/photos.js') }}"></script>
-<script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js"
-    referrerpolicy="origin"></script>
-<script>
-    tinymce.init({
-        selector: '#body',
-        plugins: 'anchor autolink link image table spellchecker lists autoresize charmap code emoticons fullscreen help hr media paste preview print quickbars toc',
-        contextmenu: 'anchor link image table spellchecker lists',
-        toolbar: 'undo redo | styleselect | bold italic underline | alignleft aligncenter alignright alignjustify | numlist bullist | emoticons | code preview fullscreen',
-        toolbar_mode: 'wrap',
-        quickbars_insert_toolbar: false,
-        min_height: 300,
-        max_height: 500,
-        paste_as_text: true,
-        image_prepend_url: window.location.protocol + "//" + window.location.host + "/uploads",
-        document_base_url: window.location.protocol + "//" + window.location.host,
-        relative_urls: false,
-        content_css: '/static/css/style.css',
-        content_style: 'body { background-color: #fffcf6; }',
-        image_list: function (success) {
-            success(getPhotoList());
-        }
-    });
-</script>
+    <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/photos.js') }}"></script>
+    <script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js"
+        referrerpolicy="origin"></script>
+    <script src="{{ url_for('static', filename='js/tiny.js') }}"></script>
 {% endblock scripts %}
