--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -1,117 +1,98 @@
 {% extends "admin/base.html" %}
 {% block styles %}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
 {% endblock styles %}
 {% block content %}
-<section id="edit_post">
-    <div class="row my-2 align-items-center">
-        <div class="order-1 order-sm-0 col-sm-8 col-md-9 col-lg-10">
-            <h1 class="text-start my-2">Edit Blog Post</h1>
+    <section id="edit_post">
+        <div class="row my-2 align-items-center">
+            <div class="order-1 order-sm-0 col-sm-8 col-md-9 col-lg-10">
+                <h1 class="text-start my-2">Edit Blog Post</h1>
+            </div>
+            <div class="order-0 order-sm-1 col-8 offset-2 offset-sm-0 col-sm-4 col-md-3 col-lg-2 text-center">
+                <img src="{{ url_for('static', filename='images/post.svg') }}" alt="Blog Post" class="section-image">
+            </div>
         </div>
-        <div class="order-0 order-sm-1 col-8 offset-2 offset-sm-0 col-sm-4 col-md-3 col-lg-2 text-center">
-            <img src="{{ url_for('static', filename='images/post.svg') }}" alt="Blog Post" class="section-image">
-        </div>
-    </div>
-    <div class="row g-4">
-        <div class="col-md-7">
-            <div class="card">
-                <form action="{{ url_for('edit_blog', id=post._id) }}" method="POST">
-                    {{ form.csrf_token }}
+        <div class="row g-4">
+            <div class="col-md-7">
+                <div class="card">
+                    <form action="{{ url_for('edit_blog', id=post._id) }}" method="POST">
+                        {{ form.csrf_token }}
+                        <div class="card-header">
+                            <h4 class="text-center">Edit</h4>
+                        </div>
+                        <div class="card-body">
+                            <div class="form-floating mb-3">
+                                {{ form.title(class="form-control", value="%s" | format(post.title)) }}
+                                {{ form.title.label }}
+                            </div>
+                            <div class="form-floating mb-3">
+                                {{ form.initial_slug(value="%s" | format(post.slug)) }}
+                                {{ form.slug(class="form-control", readonly="readonly", value="%s" | format(post.slug)) }}
+                                {{ form.slug.label }}
+                            </div>
+                            <div class="form-floating mb-3">
+                                {{ form.body(class="form-control") }}
+                                {{ form.body.label }}
+                            </div>
+                        </div>
+                        <div class="card-footer text-center d-flex justify-content-between">
+                            <a href="{{ url_for('get_blogs') }}" class="btn btn-lg btn-danger">Cancel</a>
+                            {{ form.submit(class="btn btn-lg btn-accent confirm", id="submit-form") }}
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="card">
                     <div class="card-header">
-                        <h4 class="text-center">Edit</h4>
+                        <h4 class="text-center">Photo</h4>
                     </div>
-                    <div class="card-body">
-                        <div class="form-floating mb-3">
-                            {{ form.title(class="form-control", value="%s" | format(post.title)) }}
-                            {{ form.title.label }}
+                    <div class="card-body row justify-content-center g-2">
+                        <label for="current-photo">Current Photos:</label>
+                        <div id="gallery" class="row">
+                            {% if post.photos|length %}
+                                {% set photos = post.photos.split(',') %}
+                                {% for photo in photos %}
+                                    <div class="photo-container col-sm-4 col-md-6 col-lg-4">
+                                        <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                            class="{{ post.slug }}-gallery">
+                                            <img class="img-thumbnail gallery-item"
+                                                src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
+                                                alt="Photo {{ loop.index }}">
+                                        </a>
+                                        <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
+                                            <i class="bi bi-trash-fill"></i>
+                                        </a>
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
                         </div>
-                        <div class="form-floating mb-3">
-                            {{ form.initial_slug(value="%s" | format(post.slug)) }}
-                            {{ form.slug(class="form-control", readonly="readonly", value="%s" | format(post.slug)) }}
-                            {{ form.slug.label }}
-                        </div>
-                        <div class="form-floating mb-3">
-                            {{ form.body(class="form-control") }}
-                            {{ form.body.label }}
-                        </div>
-                    </div>
-                    <div class="card-footer text-center d-flex justify-content-between">
-                        <a href="{{ url_for('get_blogs') }}" class="btn btn-lg btn-danger">Cancel</a>
-                        {{ form.submit(class="btn btn-lg btn-accent confirm", id="submit-form") }}
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="col-md-5">
-            <div class="card">
-                <div class="card-header">
-                    <h4 class="text-center">Photo</h4>
-                </div>
-                <div class="card-body row justify-content-center g-2">
-                    <label for="current-photo">Current Photos:</label>
-                    <div id="gallery" class="row">
-                        {% if post.photos|length %}
-                        {% set photos = post.photos.split(',') %}
-                        {% for photo in photos %}
-                        <div class="photo-container col-sm-4 col-md-6 col-lg-4">
-                            <a href="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
-                                class="{{ post.slug }}-gallery">
-                                <img class="img-thumbnail gallery-item"
-                                    src="{{ url_for('uploads', filename=photo.replace(' ', '')) }}"
-                                    alt="Photo {{ loop.index }}">
-                            </a>
-                            <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
-                                <i class="bi bi-trash-fill"></i>
-                            </a>
-                        </div>
-                        {% endfor %}
-                        {% endif %}
-                    </div>
-                    <div class="mb-3">
-                        <input type="hidden" id="url-for-files" value="{{ url_for('files')}}">
-                        <input type="hidden" id="collection" value="blogs">
-                        <input type="hidden" id="doc-id" value="{{ post._id }}">
-                        <label for="drop-area" class="form-label">New Photo</label>
-                        <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
-                        <div id="drop-area" data-multiple="true">
-                            <i class="bi bi-upload"></i>
-                            Drag&drop file here or click to select...
+                        <div class="mb-3">
+                            <input type="hidden" id="url-for-files" value="{{ url_for('files')}}">
+                            <input type="hidden" id="collection" value="blogs">
+                            <input type="hidden" id="doc-id" value="{{ post._id }}">
+                            <label for="drop-area" class="form-label">New Photo</label>
+                            <input type="file" name="files" id="drop-file-elem" accept="image/*" multiple>
+                            <div id="drop-area" data-multiple="true">
+                                <i class="bi bi-upload"></i>
+                                Drag&drop file here or click to select...
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 {% endblock content %}
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
-<script src="{{ url_for('static', filename='js/photos.js') }}"></script>
-<script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
-<script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js"
-    referrerpolicy="origin"></script>
-<!-- CREDIT: https://github.com/biati-digital/glightbox -->
-<script type="text/javascript">
-    const lightbox = GLightbox({ 'selector': '.{{ post.slug }}-gallery' });
-
-    tinymce.init({
-        selector: '#body',
-        plugins: 'anchor autolink link image table spellchecker lists autoresize charmap code emoticons fullscreen help hr media paste preview print quickbars toc',
-        contextmenu: 'anchor link image table spellchecker lists',
-        toolbar: 'undo redo | styleselect | bold italic underline | alignleft aligncenter alignright alignjustify | numlist bullist | emoticons | code preview fullscreen',
-        toolbar_mode: 'wrap',
-        quickbars_insert_toolbar: false,
-        min_height: 300,
-        max_height: 500,
-        paste_as_text: true,
-        image_prepend_url: window.location.protocol + "//" + window.location.host + "/uploads",
-        document_base_url: window.location.protocol + "//" + window.location.host,
-        relative_urls: false,
-        content_css: '/static/css/style.css',
-        content_style: 'body { background-color: #fffcf6; }',
-        image_list: function (success) {
-            success(getPhotoList());
-        }
-    });
-</script>
+    <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/photos.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+    <script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js"
+        referrerpolicy="origin"></script>
+    <script src="{{ url_for('static', filename='js/tiny.js') }}"></script>
+    <!-- CREDIT: https://github.com/biati-digital/glightbox -->
+    <script type="text/javascript">
+        const lightbox = GLightbox({ 'selector': '.{{ post.slug }}-gallery' });
+    </script>
 {% endblock scripts %}
