--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,7 @@
     <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}">
     <meta name="msapplication-TileColor" content="#168fd6">
     <meta name="theme-color" content="#168fd6">
-    {% block styles %}
-    {% endblock styles %}
+    {% block styles %}{% endblock styles %}
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -74,12 +73,12 @@
                         <a class="nav-link" href="{{ url_for('contact') }}" data-toggle="offcavas">Contact</a>
                     </li>
                     {% if session['user'] %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin') }}" data-toggle="offcavas">Dashboard</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}" data-toggle="offcavas">Log out</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('admin') }}" data-toggle="offcavas">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('logout') }}" data-toggle="offcavas">Log out</a>
+                        </li>
                     {% endif %}
                 </ul>
             </div>
@@ -88,24 +87,24 @@
     <main class="flex-shrink-0">
         <!-- flash messages -->
         {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-        <div class="toast-container position-fixed top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
-            {% for category, message in messages %}
-            <div class="w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
-                <div class="d-flex">
-                    <span class="m-auto px-2">
-                        <i class="bi bi-bell-fill"></i>
-                    </span>
-                    <div class="toast-body">
-                        <h4>{{ message }}</h4>
-                    </div>
-                    <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
-                            class="bi bi-x-circle"></i></a>
+            {% if messages %}
+                <div class="toast-container position-fixed top-1 start-50 translate-middle-x p-3 w-75" style="z-index: 5">
+                    {% for category, message in messages %}
+                        <div class="w-100 toast bg-{{ category }}" role="alert" aria-live="assertive" aria-atomic="true">
+                            <div class="d-flex">
+                                <span class="m-auto px-2">
+                                    <i class="bi bi-bell-fill"></i>
+                                </span>
+                                <div class="toast-body">
+                                    <h4>{{ message }}</h4>
+                                </div>
+                                <a href="" class="me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"><i
+                                        class="bi bi-x-circle"></i></a>
+                            </div>
+                        </div>
+                    {% endfor %}
                 </div>
-            </div>
-            {% endfor %}
-        </div>
-        {% endif %}
+            {% endif %}
         {% endwith %}
         {% block content %}
         {% endblock content %}
@@ -160,8 +159,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
-    {% block scripts %}
-    {% endblock scripts %}
+    {% block scripts %}{% endblock scripts %}
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 
