--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -26,7 +26,6 @@
                                 {{ form.title.label }}
                             </div>
                             <div class="form-floating mb-3">
-                                {{ form.initial_slug(value="%s" | format(post.slug)) }}
                                 {{ form.slug(class="form-control", readonly="readonly", value="%s" | format(post.slug)) }}
                                 {{ form.slug.label }}
                             </div>
@@ -69,6 +68,7 @@
                         </div>
                         <div class="mb-3">
                             <input type="hidden" id="url-for-files" value="{{ url_for('files')}}">
+                            <input type="hidden" id="url-for-signs3" value="{{ url_for('sign_s3')}}">
                             <input type="hidden" id="collection" value="blogs">
                             <input type="hidden" id="doc-id" value="{{ post._id }}">
                             <label for="drop-area" class="form-label">New Photo</label>
@@ -85,14 +85,14 @@
     </section>
 {% endblock content %}
 {% block scripts %}
+    <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+    <!-- CREDIT: https://github.com/biati-digital/glightbox -->
+    <script type="text/javascript">
+        const lightbox = GLightbox({ 'selector': '.blogs-gallery' });
+    </script>
     <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
     <script src="{{ url_for('static', filename='js/photos.js') }}"></script>
-    <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
     <script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js"
         referrerpolicy="origin"></script>
     <script src="{{ url_for('static', filename='js/tiny.js') }}"></script>
-    <!-- CREDIT: https://github.com/biati-digital/glightbox -->
-    <script type="text/javascript">
-        const lightbox = GLightbox({ 'selector': '.{{ post.slug }}-gallery' });
-    </script>
 {% endblock scripts %}
